--- a/phantomgames/Accounts/AccountScreen.storyboard
+++ b/phantomgames/Accounts/AccountScreen.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Accounts View Controller-->
+        <!--Accounts-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
-                <viewController id="Y6W-OH-hqX" customClass="AccountsViewController" customModule="phantomgames" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Accounts" id="Y6W-OH-hqX" customClass="AccountsViewController" customModule="phantomgames" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -30,27 +30,15 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Vd-78-JDA">
-                                <rect key="frame" x="125" y="665" width="136" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="Reset">
-                                    <color key="baseBackgroundColor" red="0.32549020649999999" green="0.34901961679999999" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="resetFavorites:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Xgu-Zy-lyK"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zOc-Od-BYT">
-                                <rect key="frame" x="125" y="731" width="136" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zOc-Od-BYT">
+                                <rect key="frame" x="125" y="723" width="136" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Sign Out">
                                     <color key="baseBackgroundColor" red="0.32549020649999999" green="0.34901961679999999" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </buttonConfiguration>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EVp-RR-7bi">
-                                <rect key="frame" x="0.0" y="210" width="393" height="295"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="EVp-RR-7bi">
+                                <rect key="frame" x="0.0" y="200" width="393" height="295"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="295" id="kPI-Mm-Eh1"/>
@@ -68,13 +56,29 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Vd-78-JDA">
+                                <rect key="frame" x="125" y="658" width="136" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Reset">
+                                    <color key="baseBackgroundColor" red="0.32549020649999999" green="0.34901961679999999" blue="0.86666667460000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="resetFavorites:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Xgu-Zy-lyK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="zOc-Od-BYT" secondAttribute="bottom" constant="60" id="9mU-d9-hol"/>
+                            <constraint firstItem="zOc-Od-BYT" firstAttribute="top" secondItem="2Vd-78-JDA" secondAttribute="bottom" constant="30" id="AzG-Co-cHB"/>
                             <constraint firstItem="EVp-RR-7bi" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" id="MBN-GO-R1v"/>
                             <constraint firstItem="EVp-RR-7bi" firstAttribute="top" secondItem="jNV-dR-3j3" secondAttribute="bottom" constant="20" id="P3s-Ef-kaa"/>
+                            <constraint firstItem="zOc-Od-BYT" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="125" id="aNu-qM-cLq"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zOc-Od-BYT" secondAttribute="trailing" constant="132" id="n0b-CI-REn"/>
                             <constraint firstItem="EVp-RR-7bi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="nD5-KU-E1h"/>
+                            <constraint firstItem="zOc-Od-BYT" firstAttribute="leading" secondItem="2Vd-78-JDA" secondAttribute="leading" id="nmE-IP-uTc"/>
+                            <constraint firstItem="zOc-Od-BYT" firstAttribute="trailing" secondItem="2Vd-78-JDA" secondAttribute="trailing" id="vEP-X9-S9O"/>
                         </constraints>
                     </view>
                     <connections>
