--- a/phantomgames/Search/CustomTableViewCell/CustomTableViewCell.xib
+++ b/phantomgames/Search/CustomTableViewCell/CustomTableViewCell.xib
@@ -21,16 +21,19 @@
                     <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="jZF-qT-DAv">
                         <rect key="frame" x="0.0" y="0.0" width="484" height="104"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="wQh-cf-HNO">
-                                <rect key="frame" x="0.0" y="2" width="110" height="100"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="wQh-cf-HNO" userLabel="Image Stack View">
+                                <rect key="frame" x="0.0" y="2" width="228.33333333333334" height="100"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mvc-RA-Lqh">
-                                        <rect key="frame" x="0.0" y="0.0" width="110" height="100"/>
+                                        <rect key="frame" x="6" y="0.0" width="222.33333333333334" height="100"/>
                                     </imageView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="Mvc-RA-Lqh" firstAttribute="leading" secondItem="wQh-cf-HNO" secondAttribute="leading" constant="6" id="e0z-9b-r7a"/>
+                                </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="9wo-m6-7Ce">
-                                <rect key="frame" x="116" y="14" width="147" height="76"/>
+                                <rect key="frame" x="234.33333333333337" y="14" width="147" height="76"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="tac-8y-Oe2">
                                         <rect key="frame" x="20" y="20" width="127" height="20"/>
@@ -66,7 +69,6 @@
                             </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="9wo-m6-7Ce" firstAttribute="leading" secondItem="jZF-qT-DAv" secondAttribute="leading" constant="116" id="9tA-l9-x7X"/>
                             <constraint firstItem="PwV-Oe-a3Z" firstAttribute="height" secondItem="jZF-qT-DAv" secondAttribute="height" multiplier="0.4" id="C9E-2v-DGm"/>
                             <constraint firstItem="PwV-Oe-a3Z" firstAttribute="width" secondItem="jZF-qT-DAv" secondAttribute="width" multiplier="0.2" id="HPu-eI-K0w"/>
                             <constraint firstItem="9wo-m6-7Ce" firstAttribute="width" secondItem="jZF-qT-DAv" secondAttribute="width" multiplier="0.303719" id="Hfk-fC-kBg"/>
