--- a/phantomgames/Home/HomeScreen.storyboard
+++ b/phantomgames/Home/HomeScreen.storyboard
@@ -96,8 +96,7 @@
                                     </collectionView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="nBw-Uc-h7I" firstAttribute="leading" secondItem="qGD-d3-ZZD" secondAttribute="leading" constant="10" id="ZfJ-VJ-3tT"/>
-                                    <constraint firstItem="Ma1-OL-EbA" firstAttribute="top" secondItem="nBw-Uc-h7I" secondAttribute="bottom" constant="4" id="oIg-u4-fIZ"/>
+                                    <constraint firstItem="nBw-Uc-h7I" firstAttribute="top" secondItem="qGD-d3-ZZD" secondAttribute="top" id="r9E-Ij-h6a"/>
                                     <constraint firstItem="Ma1-OL-EbA" firstAttribute="trailing" secondItem="qGD-d3-ZZD" secondAttribute="trailingMargin" id="wOj-QO-t2Z"/>
                                 </constraints>
                             </stackView>
@@ -117,9 +116,6 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
-                                        <constraints>
-                                            <constraint firstItem="hql-Aj-TKb" firstAttribute="leading" secondItem="xsr-l3-wS1" secondAttribute="leading" constant="10" id="bIZ-Es-3yI"/>
-                                        </constraints>
                                     </stackView>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="3" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="PrN-Kg-JvQ">
                                         <rect key="frame" x="0.0" y="95.000000000000057" width="430" height="126"/>
@@ -214,7 +210,7 @@
         <image name="Image 3" width="1113" height="660"/>
         <image name="U" width="1121" height="668"/>
         <systemColor name="tertiarySystemGroupedBackgroundColor">
-            <color red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
